<resources>
    <string name="app_name">StuDu</string>
    <string name="app_desc">Aplikasi Stunting Education</string>
    <string name="app_version">Versi 1.0.0</string>
    <string name="app_year">© 2022</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="atau">Atau</string>
    <string name="sign">Sign in with Google</string>
    <string name="daftar">Belum punya akun? Daftar</string>
    <string name="pernyataan">Berdasarkan hasil penghitungan anda berada dalam kategori:</string>
    <string name="isi">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prediksi_screnn">PrediksiScrenn</string>
    <string name="title_activity_hasil_normal">HasilNormalActivity</string>
    <string name="normal">Tetap pantau tumbuh kembang-nya.</string>
    <string name="ada_artikel">Adapun artikel yang bisa digunakan untuk penanganan awal dalam mencegah dan penanganan stunting yang telah disediakan:</string>
    <string name="artikel_stunting">Adapun saran artikel yang bisa digunakan untuk penanganan awal dalam mencegah dan penanganan stunting yang telah disediakan:</string>
</resources>